attempting to fix opacity transitionend bugs

--- a/dev/haml/partials/_modal_gallery.haml
+++ b/dev/haml/partials/_modal_gallery.haml
@@ -15,3 +15,9 @@
 				%use{"xlink:href" => "#ui_close"}
 
 	%img#gallery_image{:src => "assets/img/full-nn_8.jpg", :alt => ""}
+
+	#loader.loader
+		.wrap_loader
+			.loader_circle.circle-1
+			.loader_circle.circle-2
+			.loader_circle.circle-3
