--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -11,7 +11,7 @@ $hsla_pink:    hsla(4,100%,75%,1);
 
 $hsla_L96:     hsla(0,0%,96%,1);
 $hsla_L96-A98: hsla(0,0%,96%,0.98);
-
+$hsla_L96-A60: hsla(0,0%,96%,0.6);
 
 // One stylesheet to rule them all
 // ----------------------------------------------------------------------------
