fumbled about like a fool and resolved nothing

--- a/dev/haml/partials/_html_footer.haml
+++ b/dev/haml/partials/_html_footer.haml
@@ -10,7 +10,7 @@
 	%ul.footer_pride
 		%li.pride_can Can
 		%li.pride_cross
-			%svg.svg_ui-close
+			%svg.ui_close{:viewBox => "0 0 64 64"}
 				%use{"xlink:href" => "#ui_close"}
 		%li.pride_ita Ita
 
