--- a/dev/haml/partials/_html_header.haml
+++ b/dev/haml/partials/_html_header.haml
@@ -6,7 +6,7 @@
 
 			%nav#nav_main.nav_main{"data-current" => "home"}
 				%a.nav_logo.wrap_svg{:href => "#home", :title => "Back To Top", "data-scroll" => true}
-					%svg.svg_nn-logo-thick
+					%svg.nn_logo-thick{:viewBox => "0 0 64 52"}
 						%use{"xlink:href" => "#nn_logo-thick"}
 				%ul
 					%li
@@ -23,7 +23,7 @@
 						%a#email_header{:href => "#", :title => "Get in Touch"} Get in Touch
 
 			#resize_logo.nn_logo.wrap_svg
-				%svg.svg_nn-logo{:viewBox => "0 0 120 98"}
+				%svg.nn_logo.svg_inline{:viewBox => "0 0 120 98"}
 					%use{"xlink:href" => "#nn_logo"}
 
 			#resize_rule.wrap_rule
@@ -31,7 +31,7 @@
 
 			%h1.visuallyhidden North and Navy
 			#resize_wordmark.nn_wordmark.wrap_svg
-				%svg.svg_nn-wordmark{:viewBox => "0 0 850 327"}
+				%svg.nn_wordmark.svg_inline{:viewBox => "0 0 850 327"}
 					%use{"xlink:href" => "#nn_wordmark"}
 
 			%h3.address 226 Nepean St.
@@ -40,9 +40,9 @@
 			%ul.social_links
 				%li.social_twitter
 					%a.wrap_svg{:href => "https://twitter.com/northandnavy", :title => "Follow us on Twitter", :target => "_blank"}
-						%svg.svg_ui-twitter{:viewBox => "0 0 64 46"}
+						%svg.ui_twitter.svg_inline{:viewBox => "0 0 64 46"}
 							%use{"xlink:href" => "#ui_twitter"}
 				%li.social_instagram
 					%a.wrap_svg{:href => "http://instagram.com/northandnavy", :title => "See us on Instagram", :target => "_blank"}
-						%svg.svg_ui-instagram{:viewBox => "0 0 64 64"}
+						%svg.ui_instagram.svg_inline{:viewBox => "0 0 64 64"}
 							%use{"xlink:href" => "#ui_instagram"}
