--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -203,7 +203,7 @@
 						%span.menu_price 9
 
 		.wrap_svg.divider
-			%svg.svg_ui-close
+			%svg.ui_close{:viewBox => "0 0 64 64"}
 				%use{"xlink:href" => "#ui_close"}
 
 	%article.wine{"data-container" => "width_660"}
@@ -281,5 +281,5 @@
 					%span.menu_price 14/80
 
 		.wrap_svg.divider
-			%svg.svg_ui-close
+			%svg.ui_close{:viewBox => "0 0 64 64"}
 				%use{"xlink:href" => "#ui_close"}
