--- a/dev/haml/partials/_sec_gift.haml
+++ b/dev/haml/partials/_sec_gift.haml
@@ -4,7 +4,7 @@
 
 		.wrap_content
 
-			%svg.svg_ui-heart
+			%svg.ui_heart{:viewBox => "0 0 38 64"}
 				%use{"xlink:href" => "#ui_heart"}
 
 			%h5 Gift Certificates
