--- a/dev/haml/partials/_sec_photos.haml
+++ b/dev/haml/partials/_sec_photos.haml
@@ -2,7 +2,7 @@
 
 	.wrap_rule{"data-container" => "width_1200"}
 		.wrap_svg
-			%svg.svg_ui-eye
+			%svg.ui_eye{:viewBox => "0 0 64 39"}
 				%use{"xlink:href" => "#ui_eye"}
 
 	%article#packery.packery{"data-container" => "width_1200"}
