--- a/dev/haml/partials/_sec_reserve.haml
+++ b/dev/haml/partials/_sec_reserve.haml
@@ -3,6 +3,14 @@
 	%article.reservations{"data-container" => "width_768"}
 
 		.wrap_content
+
+			%h6.time_lunch
+				Lunch
+				%span Monday &ndash; Friday &nbsp;/&nbsp; 11pm &ndash; 2pm
+			%h6.time_dinner
+				Dinner
+				%span Monday &ndash; Saturday &nbsp;/&nbsp; 5pm &ndash; 10pm
+
 			%h5 Reserve
 			:plain
 				<p>To reserve a table, <a href="http://www.opentable.com/north-and-navy-reservations-ottawa?rid=162793&restref=162793" title="Make a reservation" target="_blank">book online</a> or give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a>. You can also stop by our Bacaro anytime and enjoy a snack and a drink. No reservations necessary. For large groups, we also offer a private dining room that’s perfect for parties or meetings.</p>
