--- a/dev/styles/_queries.scss
+++ b/dev/styles/_queries.scss
@@ -52,9 +52,30 @@
 	aside[data-modal="gallery"] {
 		padding-top: 8.6rem;
 	}
+	aside[data-modal="gallery"] img {
+/*
+		position: absolute;
+		top: 8.6rem;
+		left: 0;
+		right: 0;
+		bottom: 0;
+		margin-top: auto;
+		margin-bottom: auto;
+		height: calc(100% - 8.6rem);
+		// max-height: 100%;
+*/
+
+/*
+		position: relative;
+		top: 50%;
+		transform: translateY(-50%);
+		height: 90%;
+*/
+	}
 	// + gallery navigation + \\
 	nav.nav_gallery {
 		height: 8.6rem;
+		// background-color: transparent;
 	}
 	nav.nav_gallery div[data-container] a.wrap_svg {
 		top: 1.1rem;
@@ -156,6 +177,15 @@
 	// ----------------------------------------------------------------------------
 	section.reserve article div.wrap_content {
 		margin-bottom: 6rem;
+	}
+	section.reserve article div.wrap_content h6 {
+		font-size: 1.4rem;
+		letter-spacing: 0.2rem;
+		line-height: 1;
+	}
+	section.reserve article div.wrap_content h6 span {
+		display: inline-block;
+		margin-left: 1.6rem;
 	}
 
 	// Food & Wine
@@ -280,7 +310,7 @@
 	article.certificates div.wrap_content h5 {
 		margin-bottom: 6rem;
 	}
-	svg.svg_ui-heart {
+	svg.ui_heart {
 		margin-bottom: 4rem;
 	}
 
@@ -406,6 +436,12 @@
 	section.gift,
 	article.lunchdinner {
 		margin-bottom: 20rem;
+	}
+
+	// Reserve
+	// ----------------------------------------------------------------------------
+	section.reserve article div.wrap_content h6.time_dinner {
+		margin-bottom: 18rem;
 	}
 
 	// Food & Wine
