--- a/dev/styles/_queries.scss
+++ b/dev/styles/_queries.scss
@@ -53,29 +53,15 @@
 		padding-top: 8.6rem;
 	}
 	aside[data-modal="gallery"] img {
-/*
-		position: absolute;
-		top: 8.6rem;
-		left: 0;
-		right: 0;
-		bottom: 0;
-		margin-top: auto;
-		margin-bottom: auto;
-		height: calc(100% - 8.6rem);
-		// max-height: 100%;
-*/
-
-/*
 		position: relative;
 		top: 50%;
 		transform: translateY(-50%);
-		height: 90%;
-*/
+		max-height: 100%;
 	}
 	// + gallery navigation + \\
 	nav.nav_gallery {
 		height: 8.6rem;
-		// background-color: transparent;
+		background-color: transparent;
 	}
 	nav.nav_gallery div[data-container] a.wrap_svg {
 		top: 1.1rem;
@@ -383,20 +369,6 @@
 
 }
 
-@media only screen and (min-width: 64em) { // 1024px / 16px = 64em
-
-// ==|== common sections ======================================================
-// ============================================================================
-
-	// Header
-	// ----------------------------------------------------------------------------
-	// --- Main Navigation --- \\
-	nav.nav_main a.nav_logo {
-		display: block;
-	}
-
-}
-
 @media only screen and (min-width: 64em) and (max-height: 55em) { // 1024px / 16px = 64em | 880px / 16px = 55em
 
 // ==|== common sections ======================================================
@@ -410,6 +382,7 @@
 	// --- Main Navigation --- \\
 	nav.nav_main a.nav_logo {
 		opacity: 1;
+		visibility: visible;
 	}
 
 }
