added 404 page / fixed loader bug

--- a/dev/haml/partials/_doc_head.haml
+++ b/dev/haml/partials/_doc_head.haml
@@ -12,7 +12,7 @@
 	%meta{:name => "apple-mobile-web-app-status-bar-style", :content => "black"}
 
 	-# !!! REMOVE FOR LIVE !!!
-	-# %meta{:name => "robots", :content => "noindex, nofollow"}
+	%meta{:name => "robots", :content => "noindex, nofollow"}
 
 	%link{:rel => "stylesheet", :type => "text/css", :href => "//cloud.typography.com/7172754/762086/css/fonts.css"}
 	%link{:rel => "stylesheet", :type => "text/css", :href => "assets/css/styles.min.css?v=2"}
