--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -17,7 +17,7 @@
 			%img{:src => "assets/img/ill_fish.png", :alt => ""}
 
 		.wrap_content
-			%p Our menu is inspired by tradition and dictated by the quality and availability of ingredients. We play off the similarities between the climates of eastern Ontario and Northeast Italy, and create our take on classic dishes made with seasonal game, seafood and vegetables. Plus, sometimes we’ll just add whatever we want.
+			%p Our menu is inspired by tradition and dictated by the quality and availability of ingredients. We play off the similarities between the climates of Eastern Ontario and Northeast Italy, and create our take on classic dishes made with seasonal game, seafood and vegetables. Plus, sometimes we’ll just add whatever we want.
 
 	%article.lunchdinner{"data-container" => "width_660"}
 
@@ -46,7 +46,7 @@
 				%h5 Main
 				%ul
 					%li
-						%span.menu_item Minestrone Soup
+						%span.menu_item White Bean and Guanciale
 						%span.menu_price 7
 					%li
 						%span.menu_item Peperonata with Poached Egg
@@ -85,7 +85,7 @@
 						%span.menu_item Tiramisu
 						%span.menu_price 8
 					%li
-						%span.menu_item Cacio e pepe Twinkie
+						%span.menu_item Giuseppe Luigi
 						%span.menu_price 9
 
 				%h5 To Drink
@@ -130,7 +130,7 @@
 						%span.menu_item Bresola Lettuce Wraps
 						%span.menu_price 4
 					%li
-						%span.menu_item Pork &amp; Beef Polpette
+						%span.menu_item Pork and Beef Polpette
 						%span.menu_price 4
 					%li
 						%span.menu_item Cich&egrave;ti Plate (one of each)
@@ -181,19 +181,19 @@
 						%span.menu_item Turkey and Polenta
 						%span.menu_price 23
 					%li
-						%span.menu_item Venetian Liver &amp; Onions
+						%span.menu_item Venetian Liver and Onions
 						%span.menu_price 22
 					%li
 						%span.menu_item Flatiron with Fried Salami and Sunny Side Egg
 						%span.menu_price 24
 					%li
-						%span.menu_item Bistecca Fiorintina (460z, serves two)
+						%span.menu_item Bistecca Fiorintina (46oz, serves two)
 						%span.menu_price 130
 
 				%h5 Dolce
 				%ul
 					%li
-						%span.menu_item Baicoli &amp; Coffee
+						%span.menu_item Baicoli and Coffee
 						%span.menu_price 6
 					%li
 						%span.menu_item Tiramisu
@@ -238,13 +238,13 @@
 			%h5 Sparkling
 			%ul
 				%li
-					%span.menu_item Majolini, Franciacorta, Italy, N/V (non Vintage)
+					%span.menu_item Majolini, Franciacorta, Italy
 					%span.menu_price 8/90
 				%li
 					%span.menu_item Hinterland Whitecap, PEC, Canada, 2013
 					%span.menu_price 10/50
 				%li
-					%span.menu_item Lanson, Brut Black Label, Champagne France,
+					%span.menu_item Lanson Black Label, Champagne, France
 					%span.menu_price 135
 
 			%h5 White
@@ -259,25 +259,22 @@
 					%span.menu_item Alois Lageder, Pinot Grigio, Alto Adige Italy 2013
 					%span.menu_price 9/45
 				%li
-					%span.menu_item Daviss Bynum, Riverwest Chardonnay, California, USA
+					%span.menu_item Davis Bynum, Riverwest Chardonnay, California, USA
 					%span.menu_price 13/75
 
 			%h5 Red
 			%ul
 				%li
-					%span.menu_item Negrar, Ripasso di Valpolicella, Veneto, Italy
+					%span.menu_item Negrar, Valpolicella Ripasso, Italy 2012
 					%span.menu_price 8/40
 				%li
 					%span.menu_item Mission Hill, Reserve Merlot, Okanagan, Canada
 					%span.menu_price 11/55
 				%li
-					%span.menu_item Pio Cesare, Barbera D'Alba, Piedmonte, Italy
+					%span.menu_item Pio Cesare, Barbera D'Alba, Piedmont, Italy
 					%span.menu_price 12/58
 				%li
-					%span.menu_item Tenuta Del Ornellaia, La Volte, Tuscant, Italy
-					%span.menu_price 13/75
-				%li
-					%span.menu_item Travligni, Nebiolo, Gatinara, Italy
+					%span.menu_item Travaglini, Nebiolo, Gatinara, Italy
 					%span.menu_price 14/80
 
 		.wrap_svg.divider
