--- a/dev/haml/partials/_sec_gift.haml
+++ b/dev/haml/partials/_sec_gift.haml
@@ -9,6 +9,6 @@
 
 			%h5 Gift Certificates
 			:plain
-				<p>North and Navy gift certificates can be used to pay all or part of a bill, and never expire. Give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a>, and we can either email or mail a gift certificate to the recipient of your choice. If you prefer the physical kind, stop in anytime and we’d be happy to prepare one for you.</p>
+				<p>North &amp; Navy gift certificates can be used to pay all or part of a bill, and never expire. Give us a call at <a href="tel:+1-613-232-6289" title="Call us">(613) 232-6289</a>, and we can either email or mail a gift certificate to the recipient of your choice. If you prefer the physical kind, stop in anytime and we’d be happy to prepare one for you.</p>
 
 			-# %a.button{:href => "#", :title => "Give a Gift"} Give a Gift
