--- a/dev/haml/partials/_sec_reserve.haml
+++ b/dev/haml/partials/_sec_reserve.haml
@@ -6,7 +6,7 @@
 
 			%h6.time_lunch
 				Lunch
-				%span Monday &ndash; Friday &nbsp;/&nbsp; 11pm &ndash; 2pm
+				%span Monday &ndash; Friday &nbsp;/&nbsp; 11am &ndash; 2pm
 			%h6.time_dinner
 				Dinner
 				%span Monday &ndash; Saturday &nbsp;/&nbsp; 5pm &ndash; 10pm
