--- a/dev/haml/partials/_html_footer.haml
+++ b/dev/haml/partials/_html_footer.haml
@@ -5,7 +5,7 @@
 		%li.contact_email
 			%a#email_footer{:href => "#", :title => "Email North and Navy"} email us
 		%li.contact_phone
-			%a{:href => "tel:+1-613-232-6289", :title => "Call us"} 613.232.6289
+			%a{:href => "tel:+1-613-232-6289", :title => "Call us"} (613) 232-6289
 
 	%ul.footer_pride
 		%li.pride_can Can
@@ -16,5 +16,4 @@
 
 	%p.copyright &copy; 2015
 
--# = Haml::Engine.new(File.read("dev/haml/partials/_modal_gallery.haml")).render
 = Haml::Engine.new(File.read("dev/haml/partials/_doc_scripts.haml")).render
