implemented reservation form

--- a/dev/haml/partials/_sec_foodwine.haml
+++ b/dev/haml/partials/_sec_foodwine.haml
@@ -41,7 +41,7 @@
 
 			#menu_lunch.menu_lunch.menu_list.toggled
 
-				%h6.lunch_time Lunch served 11am&ndash;2pm
+				%h6.menu_subhead Lunch served 11am&ndash;2pm
 
 				%h5 Main
 				%ul
