--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -25,25 +25,15 @@ body {
 	color: $hsla_blue;
 	background-color: $hsla_gold;
 }
-/*
-// + autoprefixer does not recognize placeholder + \\
-::-webkit-input-placeholder {
-	color: #000;
-}
 ::-moz-placeholder {
-	color: #000;
 	opacity: 1;
 }
-:-ms-input-placeholder {
-	color: #000;
-}
-*/
 
 // Transitions
 // ----------------------------------------------------------------------------
-a {
-	// input,
-	// button
+a,
+input,
+button {
 	transition: all 0.3s ease-in-out;
 }
 svg {
@@ -58,11 +48,16 @@ div.wrap_menu {
 [data-overlay],
 div.wrap_menu div.menu_list {
 	transition: opacity 0.6s ease-in-out;
-	// will-change: opacity;
 }
 div.loader_overlay,
 aside[data-modal="gallery"] img {
 	transition: opacity 0.4s ease-in-out;
+}
+div.dropdown_toggle {
+	transition: background-color 0.3s ease-in-out;
+}
+div.wrap_dropdown {
+	transition: opacity 0.3s ease-in-out, visibility 0.3s ease-in-out;
 }
 // --- Animations --- \\
 @keyframes animShow {
@@ -94,7 +89,6 @@ div.loader_overlay {
 	right: 0;
 	bottom: 0;
 	left: 0;
-	// background-color: $hsla_L96-A60;
 	opacity: 0;
 	// visibility: hidden; // webkit will stop the animation if visibility is changed
 }
@@ -115,6 +109,157 @@ div.loader_overlay div.wrap_svg {
 }
 div.loader_overlay div.wrap_svg svg {
 	fill: $hsla_blue;
+}
+
+// Forms
+// ----------------------------------------------------------------------------
+input[type="text"] {
+	cursor: pointer;
+	padding: 0 4rem 0 1.6rem;
+	width: 100%;
+	height: 4.8rem;
+	font-size: 1.6rem;
+	color: $hsla_blue;
+	background-color: $hsla_L96;
+	box-shadow: inset 0 0 0 0.1rem $hsla_blue;
+}
+input[type="text"]:hover {
+	background-color: $hsla_white;
+}
+input[type="text"]:active {
+	background-color: hsla(0,0%,98%,1);
+}
+// --- Input Wraps --- \\
+div.wrap_inputs {
+	position: relative;
+	z-index: 101;
+}
+div.wrap_date,
+div.wrap_select {
+	position: relative;
+	z-index: 100;
+}
+div.wrap_date,
+div.wrap_inputs {
+	margin-bottom: 3.2rem;
+}
+div.wrap_svg.input_svg {
+	pointer-events: none;
+	position: absolute;
+	top: 1.6rem;
+	right: 1.6rem;
+	width: 1.6rem;
+	height: 1.6rem;
+	transform: rotate(90deg);
+}
+div.wrap_svg.input_svg svg {
+	fill: $hsla_blue;
+}
+// --- Select Dropdown --- \\
+div.wrap_select div.dropdown_toggle {
+	cursor: pointer;
+	position: relative;
+	z-index: 102;
+	height: 4.8rem;
+	background-color: $hsla_L96;
+	box-shadow: inset 0 0 0 0.1rem $hsla_blue;
+}
+div.wrap_select div.dropdown_toggle span {
+	display: block;
+	user-select: none;
+	padding-left: 1.6rem;
+	padding-right: 4.8rem;
+	font-size: 1.6rem;
+	text-align: left;
+	line-height: 4.8rem;
+	color: $hsla_blue;
+	white-space: nowrap;
+}
+// + dropdown list + \\
+div.wrap_select div.wrap_dropdown,
+div.wrap_select div.wrap_dropdown ul,
+div.wrap_select div.wrap_dropdown.scrollable,
+div.wrap_select div.wrap_dropdown span.fix_ios-scroll {
+	background-color: $hsla_white; // be sure there is no chance ios rubber band will show a difference background
+}
+div.wrap_select div.wrap_dropdown {
+	position: absolute;
+	z-index: 101;
+	top: 0;
+	width: 100%;
+	box-shadow: $boxshadow_drop;
+	overflow: hidden;
+}
+div.wrap_select div.wrap_dropdown ul {
+	padding-top: 4.8rem;
+}
+div.wrap_select div.wrap_dropdown ul li a {
+	display: block;
+	padding: 1.6rem;
+	font-size: 1.6rem;
+	color: $hsla_blue;
+}
+div.wrap_select div.wrap_dropdown ul li.selected a {
+	pointer-events: none;
+	color: $hsla_gold;
+}
+// + dropdown scrollable + \\
+div.wrap_select div.wrap_dropdown.scrollable {
+	height: 28.8rem; // dropdown_label height (48px) x 6
+}
+div.wrap_select div.wrap_dropdown span.fix_ios-scroll { // required only get to iOS to behave
+	display: block;
+	position: absolute;
+	top: 4.8rem;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	overflow: hidden;
+}
+div.wrap_select div.wrap_dropdown span.fix_ios-scroll ul {
+	padding-top: 0;
+	height: 100%;
+	overflow-x: hidden;
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+}
+// + chrome scrollbar + \\
+div.wrap_select div.wrap_dropdown span.fix_ios-scroll ul::-webkit-scrollbar {
+	width: 0.4rem;
+	background-color: hsla(0,0%,0%,1);
+}
+div.wrap_select div.wrap_dropdown span.fix_ios-scroll ul::-webkit-scrollbar-track {
+	background-color: $hsla_gold;
+}
+div.wrap_select div.wrap_dropdown span.fix_ios-scroll ul::-webkit-scrollbar-thumb {
+	background-color: $hsla_blue;
+}
+// + interaction + \\
+div.wrap_select:hover div.dropdown_toggle {
+	background-color: $hsla_white;
+}
+div.wrap_select:active div.dropdown_toggle {
+	background-color: hsla(0,0%,98%,1);
+}
+div.wrap_select div.wrap_dropdown ul li a:hover {
+	background-color: hsla(0,0%,98%,1);
+}
+div.wrap_select div.wrap_dropdown ul li a:active {
+	background-color: $hsla_white;
+}
+// + hide / show dropdown + \\
+div.wrap_select div.wrap_dropdown {
+	opacity: 0;
+	visibility: hidden;
+}
+div.wrap_select.toggle_show {
+	z-index: 200;
+}
+div.wrap_select.toggle_show div.wrap_dropdown {
+	opacity: 1;
+	visibility: visible;
+}
+div.wrap_select.toggle_show div.dropdown_toggle {
 }
 
 // General Styles
@@ -179,9 +324,11 @@ a:active {
 	border: 0.1rem solid $hsla_blue;
 }
 .button:hover {
+	color: $hsla_gold;
 	border-color: $hsla_gold;
 }
 .button:active {
+	color: $hsla_gold-D;
 	border-color: $hsla_gold-D;
 }
 // --- Overlay & Modal --- \\
@@ -582,6 +729,7 @@ section.reserve article div.wrap_content {
 section.reserve article div.wrap_content h6 {
 	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
 	font-size: 1.2rem;
+	font-weight: 400;
 	letter-spacing: 0.1rem;
 	line-height: 1.6;
 	text-transform: uppercase;
@@ -599,6 +747,56 @@ section.reserve article div.wrap_content h6.time_dinner {
 section.reserve article div.wrap_content p:first-of-type a[target] {
 	text-decoration: none;
 }
+// --- Reservation Form --- \\
+[data-opentable] {
+	position: fixed;
+	z-index: 999;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: hsla(0,0%,0%,0.6);
+	visibility: hidden; // requires visibility in order to hide animation on initial page load... set to 'visible' via JS class 'ready'
+	overflow-y: scroll;
+	-webkit-overflow-scrolling: touch;
+}
+html.ready [data-opentable] {
+	visibility: visible;
+}
+[data-opentable="active"] {
+	left: 0;
+	animation: animShow 0.6s ease-in-out;
+}
+[data-opentable="inactive"] {
+	left: -200%;
+	animation: animHide 0.6s ease-in-out forwards;
+}
+// + form: reserve + \\
+form.form_reserve {
+	position: absolute;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	margin: auto;
+	padding: 2.6rem 1.6rem;
+	width: 30rem;
+	height: 27.8rem;
+	background-color: $hsla_L96;
+}
+form.form_reserve div.wrap_inputs div.wrap_select {
+	float: left;
+}
+form.form_reserve div.wrap_select-size {
+	width: 10rem;
+	margin-right: 2.8rem;
+}
+form.form_reserve div.wrap_select-time {
+	width: 14rem;
+}
+form.form_reserve button.button {
+	width: 100%;
+}
 
 // Food & Wine
 // ----------------------------------------------------------------------------
@@ -614,12 +812,14 @@ div.wrap_menu {
 }
 div.wrap_menu div.menu_list {
 	position: absolute;
+	z-index: 1;
 	top: 0;
 	left: 0;
 	right: 0;
 	opacity: 0;
 }
 div.wrap_menu div.menu_list.toggled {
+	z-index: 10;
 	opacity: 1;
 }
 div.wrap_menu div.menu_list h6 {
@@ -627,7 +827,7 @@ div.wrap_menu div.menu_list h6 {
 	font-size: 1.4rem;
 	font-style: italic;
 }
-div.wrap_menu div.menu_list h6.lunch_time {
+div.wrap_menu div.menu_list h6.menu_subhead {
 	margin-bottom: 4rem;
 }
 // + menu toggle + \\
@@ -892,6 +1092,7 @@ article.oops h1 {
 	margin-bottom: 1em;
 	font-family: FFMarkWebPro, Futura, 'Trebuchet MS', Arial, sans-serif;
 	font-size: 3.6rem;
+	font-weight: 400;
 	letter-spacing: 0.6rem;
 	text-transform: uppercase;
 }
