--- a/dev/styles/styles.scss
+++ b/dev/styles/styles.scss
@@ -3,15 +3,19 @@
 
 $hsla_blue:    hsla(213,63%,22%,1);
 $hsla_blue-D:  hsla(213,63%,10%,1);
+$hsla_blue-L:  hsla(213,63%,42%,1);
 
 $hsla_gold:    hsla(41,44%,61%,1);
 $hsla_gold-D:  hsla(41,44%,44%,1);
 
 $hsla_pink:    hsla(4,100%,75%,1);
+$hsla_white:   hsla(0,0%,100%,1);
 
 $hsla_L96:     hsla(0,0%,96%,1);
 $hsla_L96-A98: hsla(0,0%,96%,0.98);
 $hsla_L96-A60: hsla(0,0%,96%,0.6);
+
+$boxshadow_drop: 0 0.1rem 0.2rem hsla(0,0%,0%,0.3);
 
 // One stylesheet to rule them all
 // ----------------------------------------------------------------------------
