--- a/dev/styles/_main.scss
+++ b/dev/styles/_main.scss
@@ -25,8 +25,15 @@ body {
 	color: $hsla_blue;
 	background-color: $hsla_gold;
 }
+::-webkit-input-placeholder {
+	color: $hsla_blue;
+}
 ::-moz-placeholder {
+	color: $hsla_blue;
 	opacity: 1;
+}
+:-ms-input-placeholder {
+	color: $hsla_blue;
 }
 
 // Transitions
