--- a/dev/haml/partials/_sec_photos.haml
+++ b/dev/haml/partials/_sec_photos.haml
@@ -13,3 +13,5 @@
 			- zeroBase = i - 1
 			%a.gallery_link{:href => "assets/img/full-nn_#{i}.jpg", :title => "View Photo", "data-gallery" => "#{zeroBase}"}
 				%img{:src => "assets/img/nn_#{i}.jpg", :alt => ""}
+			-# %.gallery_link
+				-# %img{:src => "assets/img/nn_#{i}.jpg", :alt => ""}
